<resources>
    <!-- TEXTOS GENERALS -->
    <string name="app_name">Voice Do</string>
    <string name="cancel">Cancel</string>

    <!-- DESCRIPCIO DE LES IMATGES -->
    <string name="icon_micro">Micrófono</string>
    <string name="icon_question">Pregunta</string>
    <string name="icon_doing">En curso</string>
    <string name="icon_done">Completado</string>

    <!-- TEXTOS MOSTRA -->
    <string name="mock_task_id">T13</string>
    <string name="mock_task_state">Doing</string>
    <string name="mock_event_id">E13</string>
    <string name="mock_event_date">17 MAR</string>
    <string name="mock_list_count">30 ITEMS</string>
    <string name="mock_long_text">Lorem ipsum dolor sit amet, consect aeasdasdasdasdasd</string>
    <string name="mock_very_long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
        do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
        dolor in reprehenderit in voluptate velit esse cillum dolore.</string>
    <string name="mock_shopping_list">Butcher list</string>
    <string name="mock_product">Hamburguesa de ternera</string>
    <string name="mock_task_date">23.05.2020 13:00:00</string>
    <string name="mock_event_time">13:00</string>
    <string name="mock_event_full_date">23.05.2020</string>
    <string name="mock_shopping_list_name">Butcher</string>

    <!-- ACTIVITY MAIN -->
    <string name="location_permission_granted">Location permission enabled</string>
    <string name="location_permission_not_granted">Location permission NOT enabled. You will be unable to check your location.</string>
    <string name="microphone_permission_granted">Microphone permission enabled</string>
    <string name="microphone_permission_not_granted">Microphone permission NOT enabled. You will be unable to control the app by voice.</string>
    <string name="calendar_permission_granted">Calendar permission enabled</string>
    <string name="calendar_permission_not_granted">Calendar permission NOT enabled. You will be unable to view or create events.</string>

    <string name="main_help_actions">Actions</string>
    <string name="main_help_actions_list_1"> Create/delete task </string>
    <string name="main_help_actions_list_2"> Create/delete event </string>
    <string name="main_help_actions_list_3"> Create/delete list </string>
    <string name="main_help_view">View</string>
    <string name="main_help_view_list_1">View task 12</string>
    <string name="main_help_view_list_2">View event 16</string>
    <string name="main_help_view_list_3">View list butcher</string>
    <string name="main_help_queries">Queries</string>
    <string name="main_help_queries_list_1">Show all tasks</string>
    <string name="main_help_queries_list_2">Show all events</string>
    <string name="main_help_queries_list_3">Show all lists</string>
    <string name="main_help_queries_list_4">Show undone tasks</string>
    <string name="main_help_queries_list_5">Show tasks in process</string>
    <string name="main_help_queries_list_6">View events on &lt;weekday&gt; </string>
    <string name="main_help_queries_list_7">View events this week</string>
    <string name="main_help_queries_list_8">View events next week</string>
    <string name="main_help_queries_list_9">View events tomorrow</string>
    <string name="main_help_queries_list_10">View my location</string>

    <!-- ACTIVITY TASK -->
    <string name="label_task_description">Task description</string>
    <string name="label_task_state">Task state</string>
    <string name="label_task_date">State date</string>
    <string name="state_todo">PENDING</string>
    <string name="state_doing">DOING</string>
    <string name="state_done">DONE</string>
    <string name="remove_task_help">Say "remove task" to remove the current task</string>
    <string name="edit_task_name_help">Say "edit name" to enter a new name for this task</string>
    <string name="edit_task_state_help">Say "edit state" to enter a new state for this task</string>
    <string name="edit_task_back_help">Say "back" to return to the previous page</string>

    <!-- ACTIVITY EVENT -->
    <string name="label_event_date">Event date</string>
    <string name="label_event_description">Event description</string>
    <string name="remove_event_help">Say "remove event" to remove the current event</string>
    <string name="edit_event_name_help">Say "edit name" to enter a new name for this event</string>
    <string name="edit_event_date_help">Say "edit date" to enter a new date for this event</string>
    <string name="edit_event_back_help">Say "back" to return to the previous page</string>

    <!-- ACTIVITY LIST -->
    <string name="label_list_name">List name</string>
    <string name="label_list_items">List items</string>
    <string name="remove_list_help">Say "remove list" to remove the current list</string>
    <string name="edit_list_name_help">Say "edit name" to enter a new name for this list</string>
    <string name="edit_list_products_help">Say "edit list" to enter a new date for this list</string>
    <string name="edit_list_back_help">Say "back" to return to the previous page</string>
    <string name="say_task_name_help">Say the name of the task to proceed</string>
    <string name="say_event_name_help">Say the name of the event to proceed</string>
    <string name="say_event_date_help">Say the date of the event to proceed</string>
    <string name="say_task_status_name_help">Say the name of the status to proceed</string>
    <string name="say_list_name_help">Say the name of the list to proceed</string>

    <string name="ask_list_name">Please, say the name of the list</string>
    <string name="ask_event_name">Please, say the name of the event</string>
    <string name="ask_event_date">Please, say the date of the event</string>
    <string name="ask_event_time">Please, say the time of the event</string>
    <string name="ask_products">Okay! Let\'s add some products to the list</string>
    <string name="unexpected_action">Unexpected action. Please, say an other order</string>
    <string name="ask_task_status">Please, say the new state of the TASK. \n Available states: \n\n PENDING \n DOING \n DONE </string>
    <string name="ask_task_name">Please, say the name of the task</string>

    <string name="list_saved">List saved!</string>
    <string name="task_saved">Task saved!</string>
    <string name="event_saved">Event saved!</string>
    <string name="list_already_exists">List already exists, choose another name!</string>

    <!-- RESPONSE MESSAGES -->
    <string name="response_how_can_help">Hi! How can I help you?</string>
    <string name="response_not_understand">I\'m not able to understand you. Please, repeat the order.</string>
    <string name="response_task_not_found">Task not found</string>
    <string name="response_event_not_found">Event not found</string>
    <string name="response_list_not_found">List not found</string>
    <string name="response_confirm_remove_task">Are you sure you want to remove the task %1$s?</string>
    <string name="response_confirm_remove_list">Are you sure you want to remove the list %1$s?</string>
    <string name="response_confirm_remove_event">Are you sure you want to remove the event %1$s?</string>
    <string name="response_remove_canceled">Element not removed</string>
    <string name="response_removing_task">Removing task</string>
    <string name="response_removing_event">Removing event</string>
    <string name="response_removing_list">Removing list</string>
    <string name="response_creating_task">Creating task</string>
    <string name="response_creating_event">Creating event</string>
    <string name="response_creating_list">Creating list</string>
    <string name="response_opening_event">Showing event %1$s</string>
    <string name="response_opening_list">Showing list %1$s</string>
    <string name="response_opening_task">Showing task %1$s</string>
    <string name="response_no_location_detected">No location available</string>
    <string name="response_location">Your location is: %1$s</string>
    <string name="response_product_repeated">Product already exists in this list</string>
    <string name="response_product_not_found">Product not found, try again!</string>
    <string name="response_say_a_name_product">Please, say a name for the product!</string>
    <string name="response_no_order_found">No order found. Check your micro and try again!</string>
    <string name="response_confirm_exit">Are you sure you want to leave? All progress will be lost!</string>

    <string name="task_id_placeholder">T%1$d</string>
    <string name="event_id_placeholder">E%1$d</string>

    <string name="confirmation_help">Say "yes" or "confirm" to continue the process</string>
    <string name="cancelation_help">Say "no" or "cancel" to stop the process</string>

    <string name="response_invalid_date">Not valid date, please, say another one!</string>
    <string name="response_invalid_time">Not valid time, please, say another one!</string>

    <string name="view_task">View task</string>
    <string name="view_list">View list</string>
    <string name="view_event">View event</string>
    <string name="create_task">Create task</string>
    <string name="create_list">Create list</string>
    <string name="create_event">Create event</string>

    <string name="empty_list">Empty list!</string>
    <string name="unable_to_calendar">Unable to make calendar actions, enable the permissions to acces to the calendar!</string>
    <string name="query_not_implemented">Query not implemented!</string>
    <string name="day_not_specified">Day of week is empty, showing everything!</string>
    <string name="not_weekday">Day of week not valid, showing everything!</string>
</resources>