<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:orientation="vertical"

    android:padding="@dimen/card_spacing"
    android:background="@drawable/card_background">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_help"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/icon_question"
        android:padding="20dp"
        android:layout_marginBottom="@dimen/default_spacing_small"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_xlarge"
        android:text="@string/main_help_actions"
        android:textColor="#000"
        android:textAllCaps="true"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_small"
        android:text="@string/main_help_actions_list_1"
        android:textColor="#000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_small"
        android:text="@string/main_help_actions_list_2"
        android:textColor="#000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_small"
        android:text="@string/main_help_actions_list_3"
        android:textColor="#000"

        android:layout_marginBottom="@dimen/default_spacing"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_xlarge"
        android:text="@string/main_help_view"
        android:textColor="#000"
        android:textAllCaps="true"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_small"
        android:text="@string/main_help_view_list_1"
        android:textColor="#000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_small"
        android:text="@string/main_help_view_list_2"
        android:textColor="#000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_small"
        android:text="@string/main_help_view_list_3"
        android:textColor="#000"

        android:layout_marginBottom="@dimen/default_spacing"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_xlarge"
        android:text="@string/main_help_queries"
        android:textColor="#000"
        android:textAllCaps="true"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_small"
        android:text="@string/main_help_queries_list_1"
        android:textColor="#000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_small"
        android:text="@string/main_help_queries_list_2"
        android:textColor="#000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_small"
        android:text="@string/main_help_queries_list_3"
        android:textColor="#000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_small"
        android:text="@string/main_help_queries_list_4"
        android:textColor="#000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_small"
        android:text="@string/main_help_queries_list_5"
        android:textColor="#000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_small"
        android:text="@string/main_help_queries_list_6"
        android:textColor="#000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_small"
        android:text="@string/main_help_queries_list_7"
        android:textColor="#000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_small"
        android:text="@string/main_help_queries_list_8"
        android:textColor="#000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_small"
        android:text="@string/main_help_queries_list_9"
        android:textColor="#000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="@dimen/font_small"
        android:text="@string/main_help_queries_list_10"
        android:textColor="#000"
        />
</LinearLayout>