<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/card_padding"

    android:layout_marginBottom="@dimen/card_spacing"
    android:background="@drawable/card_background"
    android:elevation="@dimen/card_elevation">

    <TextView
        android:id="@+id/label_id"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:text="@string/mock_event_id"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:textSize="@dimen/font_small"

        android:layout_marginEnd="@dimen/default_spacing"
        android:layout_marginStart="2dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/label_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:text="@string/mock_long_text"
        android:textColor="@color/font_dark"
        android:textSize="@dimen/font_xsmall"

        android:lines="2"
        android:ellipsize="end"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/label_date"
        android:layout_width="40dp"
        android:layout_height="match_parent"

        android:text="@string/mock_event_date"
        android:textStyle="bold"
        android:textColor="@color/primary"
        android:textSize="@dimen/font_small"
        android:textAllCaps="true"

        android:layout_marginStart="@dimen/default_spacing"
        android:gravity="center" />
</LinearLayout>