<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center">

    <LinearLayout
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:background="@drawable/circle_white"
        android:elevation="@dimen/card_elevation"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/microphone_container"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/circle_primary"
            android:elevation="@dimen/card_elevation"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_microphone"
                android:contentDescription="@string/icon_micro"
                android:padding="@dimen/default_spacing"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginBottom="@dimen/default_spacing_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center">

        <ImageView
            android:id="@+id/icon_waves"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:scaleY="0.5"

            android:gravity="center"
            android:src="@drawable/ic_speaker"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"

            android:gravity="center"

            android:text="@string/response_how_can_help"
            android:textSize="@dimen/font_medium"
            android:textStyle="italic"
            android:textColor="@color/font_light"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/default_spacing"
        android:paddingHorizontal="30dp"

        android:text="@string/cancel"
        android:textStyle="bold"
        android:textColor="@color/primary"

        android:background="@drawable/button_background"
        app:backgroundTint="#FFF"

        android:layout_marginTop="30dp" />
</LinearLayout>